[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Classes/dice.gd" type="Script" id=1]
[ext_resource path="res://Scripts/input_manager.gd" type="Script" id=2]
[ext_resource path="res://Images/dice_0.png" type="Texture" id=3]
[ext_resource path="res://Images/d6_outline.png" type="Texture" id=4]
[ext_resource path="res://Scenes/stage.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 41 )

[node name="Stage" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 596.0
margin_bottom = 148.0
mouse_filter = 2
color = Color( 0.25098, 0.4, 0.384314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BoardBackground" type="ColorRect" parent="."]
margin_left = 632.0
margin_top = 224.0
margin_right = 1216.0
margin_bottom = 672.0
mouse_filter = 2
color = Color( 0.25098, 0.4, 0.384314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PreviewBackground" type="ColorRect" parent="."]
margin_left = 632.0
margin_top = 20.0
margin_right = 808.0
margin_bottom = 193.0
mouse_filter = 2
color = Color( 0.25098, 0.4, 0.384314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BackToMenu" type="Button" parent="InputManager"]
margin_left = 1160.0
margin_top = 16.0
margin_right = 1261.0
margin_bottom = 104.0
text = "Back To Menu"

[node name="ButtonRotate" type="Button" parent="InputManager"]
margin_left = 872.0
margin_top = 40.0
margin_right = 968.0
margin_bottom = 128.0
disabled = true
text = "Rotate"

[node name="ButtonFlip" type="Button" parent="InputManager"]
margin_left = 992.0
margin_top = 40.0
margin_right = 1088.0
margin_bottom = 128.0
disabled = true
text = "Flip"

[node name="ButtonRollDice" type="Button" parent="InputManager"]
margin_left = 36.0
margin_top = 40.0
margin_right = 132.0
margin_bottom = 128.0
disabled = true
text = "Roll
Dice"

[node name="ButtonUndo" type="Button" parent="InputManager"]
margin_left = 484.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 128.0
text = "Undo"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0.195313, 0.195313, 0.195313, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dice1" type="Area2D" parent="."]
position = Vector2( 212, 84 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Dice1"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice1"]
shape = SubResource( 4 )

[node name="Dice2" type="Area2D" parent="."]
position = Vector2( 308, 84 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Dice2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice2"]
shape = SubResource( 4 )

[node name="Dice3" type="Area2D" parent="."]
position = Vector2( 404, 84 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Dice3"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice3"]
shape = SubResource( 4 )

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 212, 84 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 308, 84 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position3" type="Position2D" parent="."]
position = Vector2( 404, 84 )
__meta__ = {
"_edit_lock_": true
}

[node name="SlotShape" type="Area2D" parent="."]
position = Vector2( 24, 192 )

[node name="Sprite" type="Sprite" parent="SlotShape"]
position = Vector2( 64, 65 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotShape"]
position = Vector2( 64, 65 )
shape = SubResource( 3 )

[node name="SlotBuilding" type="Area2D" parent="."]
position = Vector2( 24, 360 )

[node name="Sprite" type="Sprite" parent="SlotBuilding"]
position = Vector2( 64, 65 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotBuilding"]
position = Vector2( 64, 65 )
shape = SubResource( 3 )

[node name="SlotNature" type="Area2D" parent="."]
position = Vector2( 24, 528 )

[node name="Sprite" type="Sprite" parent="SlotNature"]
position = Vector2( 64, 65 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotNature"]
position = Vector2( 64, 65 )
shape = SubResource( 3 )

[connection signal="pressed" from="InputManager/BackToMenu" to="InputManager" method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="InputManager/ButtonRollDice" to="InputManager" method="_on_ButtonRollDice_pressed"]
[connection signal="pressed" from="InputManager/ButtonUndo" to="InputManager" method="_on_ButtonUndo_pressed"]
